Добавлена авторизация, регистрация и функционал по добавлению заметок

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <script src="https://cdn.tiny.cloud/1/z3eimocx9fv2bf2dvx58jrg7rpucop18ugvm9x1exsu5n23o/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
   </head>
   <body>
     <noscript>
